# VoiceTypeX

./: .editorconfig  .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  cliff.toml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: appimage-validate.yml  ci.yml  release.yml
docs/: ARCHITECTURE.md  MODES.md  PLATFORMS.md  PROVIDERS.md  RELEASING.md
modes/: claude_code_anweisung.toml  exaktes_diktat.toml  foermliche_email.toml  github_issue.toml  korrigierendes_diktat.toml  slack_teams.toml
modes/defaults/de/: claude_code_anweisung.toml  foermliche_email.toml  github_issue.toml  improve.toml  korrigierendes_diktat.toml  reply.toml  slack_teams.toml  transform.toml
modes/defaults/en/: claude_code_anweisung.toml  exaktes_diktat.toml  foermliche_email.toml  github_issue.toml  improve.toml  korrigierendes_diktat.toml  reply.toml  slack_teams.toml  transform.toml
modes/defaults/es/: claude_code_anweisung.toml  exaktes_diktat.toml  foermliche_email.toml  github_issue.toml  improve.toml  korrigierendes_diktat.toml  reply.toml  slack_teams.toml  transform.toml
modes/defaults/fr/: claude_code_anweisung.toml  exaktes_diktat.toml  foermliche_email.toml  github_issue.toml  improve.toml  korrigierendes_diktat.toml  reply.toml  slack_teams.toml  transform.toml
modes/defaults/it/: claude_code_anweisung.toml  exaktes_diktat.toml  foermliche_email.toml  github_issue.toml  improve.toml  korrigierendes_diktat.toml  reply.toml  slack_teams.toml  transform.toml
scripts/: bump-version.mjs  bundle-libs.mjs  clean-dangling-libs.mjs  i18n-check.mjs  uninstall-cleanup.ps1  uninstall-cleanup.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  deny.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/resources/lib/: .gitkeep
src-tauri/src/: lib.rs  main.rs  secrets.rs
src-tauri/src/audio/: cues.rs  mod.rs  recorder.rs
src-tauri/src/core/: app_context.rs  bounded_lru.rs  config.rs  default_modes.rs  edit.rs  error.rs  events.rs  hardware.rs  log_buffer.rs  mod.rs  modes.rs  retry.rs  session.rs  state.rs
src-tauri/src/hotkey/: linux_wayland.rs  linux_x11.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/injection/: clipboard_fallback.rs  focus_tracker.rs  libei_worker.rs  linux_wayland.rs  linux_x11.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/ipc/: cache.rs  diagnostics.rs  mod.rs  modes.rs  recording.rs  reset.rs  secrets.rs  settings.rs
src-tauri/src/pipeline/: mod.rs
src-tauri/src/processing/: embedded.rs  local.rs  mod.rs
src-tauri/src/processing/cloud/: anthropic.rs  mod.rs  openai.rs  openai_compatible.rs  xai.rs
src-tauri/src/transcription/: backend.rs  local.rs  local_agreement.rs  mod.rs  model_downloader.rs
src-tauri/src/transcription/cloud/: deepgram.rs  groq.rs  mod.rs  openai.rs  whisper_compatible.rs  xai.rs
src-tauri/src/tray/: icon.rs  mod.rs
src/components/: ApiKeysSection.tsx  AutoPasteTestSection.tsx  Banner.tsx  Button.tsx  Field.tsx  Input.tsx  Loading.tsx  Logo.tsx  ModeEditor.tsx  OnboardingWizard.tsx  Sidebar.tsx  TabBar.tsx  TestTranscriptionSection.tsx  ThemeToggle.tsx  UpdateSection.tsx  WhisperModelCards.tsx  modeValidation.test.ts  modeValidation.ts
src/i18n/: detect.test.ts  detect.ts  format.ts  index.ts  translate.test.ts  translate.ts
src/i18n/locales/: de.json  en.json  es.json  fr.json  it.json
src/lib/: events.test.ts  events.ts  llmSlots.ts  logFilter.test.ts  logFilter.ts  payload-contract.test.ts  platform.ts  recommend.test.ts  recommend.ts  tauri.test.ts  tauri.ts  tauriListen.ts  theme.ts  types.ts  whisperModels.test.ts  whisperModels.ts
src/store/: index.test.ts  index.ts
src/styles/: globals.css
src/views/: Logs.tsx  Menu.tsx  Modes.tsx  Overlay.tsx  Settings.tsx
