# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "voicetypex"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Plattformuebergreifendes Diktier-Tool mit Cursor-Insertion"
authors = ["Kevin Stenzel <mail@kevin-stenzel.de>"]
repository = "https://gitlab.com/kevin-stenzel/voicetypex"
readme = "../README.md"
build = "build.rs"
default-run = "voicetypex"

[lib]
name = "voicetypex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri-Core und Plugins
tauri = { version = "2.1", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-store = "2.1"
# tauri-plugin-updater erst in Phase 6 — braucht zwingend
# `plugins.updater`-Config (endpoints + pubkey) in tauri.conf.json,
# sonst Runtime-Panic beim Plugin-Init.

# Serialisierung
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async und Fehlerbehandlung
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OS-Keychain (BYOK API-Keys, niemals im Klartext).
# Ohne Backend-Feature faellt keyring 3.x auf einen RAM-Mock-Store
# zurueck (keine Persistenz) — der KEK ueberlebt dann keinen Neustart
# und secrets.json wird unentschluesselbar. Die Plattform-Backends sind
# target-gated, daher koennen alle drei Features parallel gesetzt werden.
# `crypto-rust` vermeidet eine System-libssl-Build-Abhaengigkeit.
keyring = { version = "3", features = [
    "sync-secret-service",
    "crypto-rust",
    "windows-native",
    "apple-native",
] }

# Encryption-at-rest fuer die secrets.json. AES-256-GCM auf Linux mit
# einem Random-KEK aus dem OS-Keyring (libsecret/kwallet). Windows nutzt
# DPAPI direkt (siehe target-spezifische deps unten). macOS bleibt
# vorerst out-of-scope (Stub mit klar gekennzeichneter Klartext-Warnung).
aes-gcm = "0.10"
base64 = "0.22"

# Audio-Aufnahme (cpal) und WAV-IO (hound)
cpal = "0.15"
hound = "3.5"

# Resampling 44.1k/48k -> 16 kHz Mono fuer Whisper-Eingabe
rubato = "0.16"

# Audio-Wiedergabe der Recording-Cues
rodio = { version = "0.20", default-features = false, features = ["wav"] }

# Lokales STT via whisper.cpp (Rust-Bindings).
# 0.16 bringt Silero-VAD-API (enable_vad / set_vad_model_path /
# set_vad_params) und Streaming-Callbacks, beides Pflicht-Bausteine
# fuer die Local-Pipeline-Modernisierung.
whisper-rs = "0.16"

# Lokales LLM via llama.cpp (Rust-Bindings) — Phase 3b.
# Ersetzt mittelfristig die Ollama-HTTP-Dependency durch embedded
# Inferenz. Features:
# - `vulkan`: GPU-Beschleunigung im selben Backend wie unser Whisper,
#   konsistente Hardware-Anforderungen.
# - `sampler`: idiomatische Rust-Sampling-API (statt manueller Token-
#   Loop), wird in `LlamaEmbeddedProcessor` verwendet.
# - `dynamic-link`: llama.cpp wird als Shared-Lib (libllama.so) gelinkt,
#   nicht statisch in unsere Binary einkompiliert. **Pflicht-Feature**:
#   sonst kollidieren llama-cpp-sys-2 und whisper-rs-sys beim Linken,
#   weil beide ihre eigene statische ggml bundlen (gguf_get_val_*
#   duplicate symbols). Mit dynamic-link liegen die ggml-Symbole in
#   einer separaten .so und kollidieren nicht.
# - default-features=false: deaktiviert openmp (zusaetzliche libomp-
#   Build-Dep) und android-shared-stdcxx (irrelevant fuer Desktop).
#
# `dynamic-backends` (Runtime-Backend-Dispatch, dlopen-CUDA-Pfad)
# kommt in einer Folge-Iteration, wenn wir auch GGML-Backends als
# Shared-Libs bundeln.
llama-cpp-2 = { version = "0.1.146", default-features = false, features = ["vulkan", "sampler", "dynamic-link"] }

# HTTP-Client + Streaming + Hashing fuer Modell-Download
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "multipart"] }
sha2 = "0.10"
futures-util = "0.3"

# Atomare Primitiven
parking_lot = "0.12"

# Filesystem-Watch fuer modes/-Hot-Reload
notify = "6"

# Cross-Plattform-Keystroke-Injection (Paste-Shortcut + Direct-Keystroke-Modus)
enigo = "0.3"

# DPAPI fuer das Secret-Storage auf Windows (CryptProtectData /
# CryptUnprotectData). User-bound, machine-bound — Standardweg fuer
# Cleartext-Krypto auf Desktop-Windows.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }

# Wayland: xdg-desktop-portal (GlobalShortcuts + RemoteDesktop) via DBus.
# Nur auf Linux gelinkt, weil sonst libdbus auf Windows/macOS Probleme macht.
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.11", default-features = false, features = ["tokio"] }
# reis: pure-Rust libei/EI-Protokoll fuer Tastendruck-Simulation auf Wayland
# (siehe CLAUDE.md §11 Phase 5 Teil 2). Vorbild: lan-mouse. Pin auf konkrete
# Minor-Version, weil 0.x — Upgrade-Strategie: explizite Aufgabe, kein
# automatisches Mit-Updaten via cargo update.
reis = { version = "=0.6.1", features = ["tokio"] }
# xkbcommon: Keysym-zu-Keycode-Mapping fuer Layout-bewusste Tastendruecke
# (z.B. Strg+V auf QWERTZ vs. QWERTY). Wird vom reis-Beispiel genutzt
# und ist die kanonische Wahl.
xkbcommon = "0.7"
# arboard: liest die PRIMARY-Selection (markierter Text) fuer die
# Bearbeiten-Modi direkt aus — auf X11 nativ, auf Wayland via
# wlr/ext-data-control (Feature `wayland-data-control`), fokus-unabhaengig
# und ohne Ctrl+C-Simulation. Bereits transitiv via
# tauri-plugin-clipboard-manager im Baum; hier direkt nutzbar gemacht.
arboard = { version = "3", features = ["wayland-data-control"] }

[features]
# Default ab Phase 3a: 'gpu-vulkan' — Vulkan deckt iGPU + AMD + Intel
# Arc + NVIDIA (~95 % der Consumer-Hardware) mit *einem* Binary. Wenn
# kein Vulkan-Device verfuegbar ist, faellt whisper.cpp automatisch
# auf CPU zurueck (kein Code-Pfad noetig). Build-Zeit-Voraussetzung
# auf Linux: libvulkan-dev (Headers). Runtime: libvulkan1 + Treiber
# (mesa-vulkan-drivers fuer iGPU, vendor-Treiber fuer dGPU).
#
# `fast-cpu` (OpenBLAS) bleibt als Opt-in fuer User die kein Vulkan
# wollen — z.B. Server-Container, headless-Setups, Lizenz-Constraint-
# Sensitiv. Build via `cargo build --no-default-features --features
# custom-protocol,fast-cpu`.
#
# `gpu-cuda` ist optional fuer NVIDIA-Power-User; produziert ein
# separates Bundle (CI-Matrix). Phase 3b ergaenzt dlopen-CUDA fuer
# das LLM via llama-cpp-2 — STT bleibt aber bei Vulkan/CPU im
# Default-Binary, weil whisper-rs noch kein dynamic-backends-Feature
# hat.
default = ["custom-protocol", "gpu-vulkan"]
custom-protocol = ["tauri/custom-protocol"]
fast-cpu = ["whisper-rs/openblas"]
gpu-vulkan = ["whisper-rs/vulkan"]
gpu-cuda = ["whisper-rs/cuda"]
gpu-metal = ["whisper-rs/metal"]
gpu-coreml = ["whisper-rs/coreml"]
# Phase 3b — opt-in fuer NVIDIA-Builder. Aktiviert `dynamic-backends`
# bei llama-cpp-2: GGML-Backends (cpu, vulkan, cuda) werden als
# separate ggml-*.so/.dll-Files gebaut und zur Laufzeit via dlopen
# geladen. Damit kann ein Builder mit CUDA-Toolkit + libvulkan-dev
# ein Bundle erzeugen, das auf User-Maschinen automatisch CUDA nutzt
# wenn die NVIDIA-Treiber vorhanden sind, und sonst transparent auf
# Vulkan/CPU fallbackt. Build:
#   cargo build --release --features embedded-cuda-dynamic
# Erfordert CUDA-Toolkit auf der Build-Maschine — auf reinen Vulkan-
# Buildern fehlt das, daher nicht im Default-Feature-Set.
embedded-cuda-dynamic = [
    "llama-cpp-2/dynamic-backends",
    "llama-cpp-2/cuda",
]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
